packages/web/src/app/shared/component-documentation/ceg/ceg.component.scss
@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;

.ceg-container {
  display: grid;
  grid-template-columns: 8fr 2fr;
  gap: 16px 24px;
  overflow: auto;

  @include breakpoints.breakpoint-up(Mobile) {
    grid-template-columns: 1fr;
  }
}

.ceg-header {
  display: flex;
  align-items: baseline;
  gap: 16px;
}

.component-example-container {
  position: relative;
  grid-row: 2;
  grid-column: 1;
  border: 1px solid var(--e-grey-10);
  border-radius: 8px;
  padding: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.ceg-desktop-controls {
  grid-row: 2;
  grid-column: 2;

  @include breakpoints.breakpoint-up(Mobile) {
    display: none;
  }
}

.ceg-floating-toolbar {
  position: absolute;
  inset: 8px 8px auto auto;
  gap: 8px;
  display: none;

  @include breakpoints.breakpoint-up(Mobile) {
    display: flex;
  }
}

.code-generator {
  grid-row: 3;
}

